Added Git link to page and added profile.html

--- a/profile.html
+++ b/profile.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-
 <html>
-    
     <head>
         <title>
-            Band Finder Startup Homepage
+            User Profile Page
         </title>
     </head>
-    
     <body>
-        <h1>Login</h1>
+        <header>
+            User
+        </header>
+        <h1>User Info</h1>
+        <p>Name, experience, genre interests, etc.</p>
+        <p>User-submitted video</p>
         <footer>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
         </footer>
     </body>
-
 </html>
