Added the rest of the HTML pages

--- a/HTMLFiles/index.html
+++ b/HTMLFiles/index.html
@@ -4,7 +4,7 @@
     
     <head>
         <title>
-            Band Finder Startup Homepage
+            Band Finder Login Page
         </title>
     </head>
     
