added a log in button, linked index.html to homepage

--- a/HTMLFiles/homepage.html
+++ b/HTMLFiles/homepage.html
@@ -15,6 +15,7 @@
         <a href="profile.html">Profile</a>
         <a href="band_view.html">Bands</a>
         <a href="shows.html">Shows</a>
+        <a href="index.html">Log Out</a>
         <footer>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
         </footer>
