--- a/HTMLFiles/index.html
+++ b/HTMLFiles/index.html
@@ -9,7 +9,15 @@
     </head>
     
     <body>
-        <h1>Login</h1>
+        <header>
+            <h1>welcome to Bandfinder.click</h1>
+        </header>
+        <p>Login to access your profile</p>
+        <form method ='get' action="homepage.html">
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="username"/>
+            <button type="submit">Login</button>
+        </form>
         <footer>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
         </footer>
