--- a/HTMLFiles/band_view.html
+++ b/HTMLFiles/band_view.html
@@ -10,6 +10,18 @@
             User
         </header>
         <p>List of bands on the site looking for members</p>
+        <table>
+            <tr>
+                <th>Band Name</th>
+                <th>Genre</th>
+                <th>Available Positions</th>
+            </tr>
+            <tr>
+                <td>Example Band</td>
+                <td>Rock</td>
+                <td>Drummer</td>
+            </tr>
+        </table>
         <a href="band.html">band example</a>
         <footer>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
