--- a/HTMLFiles/profile.html
+++ b/HTMLFiles/profile.html
@@ -16,6 +16,7 @@
         <p>User-submitted video</p>
         <iframe width="400" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=8RduAHAXlNKESE8V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <footer>
+            <a href="index.html">Log Out</a>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
         </footer>
     </body>
