--- a/HTMLFiles/shows.html
+++ b/HTMLFiles/shows.html
@@ -11,6 +11,7 @@
         </header>
         <p>List of shows being put on by bands from the site with info about whether bands are needed to headline (Database Info)</p>
         <footer>
+            <a href="index.html">Log Out</a>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
         </footer>
     </body>    
