Added 3rd party placeholder for messaging

--- a/HTMLFiles/band_view.html
+++ b/HTMLFiles/band_view.html
@@ -9,7 +9,7 @@
         <header>
             User
         </header>
-        <p>List of bands on the site looking for members</p>
+        <p>List of bands on the site looking for members(Database)</p>
         <table>
             <tr>
                 <th>Band Name</th>
