--- a/HTMLFiles/homepage.html
+++ b/HTMLFiles/homepage.html
@@ -9,9 +9,18 @@
         <header>
             User
         </header>
-        <p>
-            Messages, navigation options, news 
-        </p>
+        <p>Messages(3rd party service)</p>
+        <label for="Messages">Inbox</label>
+        <select id="'Messages">
+            <optgroup label="Recieved Messages">
+                <option>Message 1</option>
+                <option>Message 2</option>
+            </optgroup>
+            <optgroup label="Send New Message">
+                <option>Contact1</option>
+                <option>Contact2</option>
+            </optgroup>
+        </select>
         <a href="profile.html">Profile</a>
         <a href="band_view.html">Bands</a>
         <a href="shows.html">Shows</a>
