--- a/HTMLFiles/shows.html
+++ b/HTMLFiles/shows.html
@@ -9,7 +9,21 @@
         <header>
             User
         </header>
-        <p>List of shows being put on by bands from the site with info about whether bands are needed to headline (Database Info)</p>
+        <p>List of shows (Websocket Data)</p>
+        <table>
+            <tr>
+                <th>Location</th>
+                <th>Bands</th>
+                <th>Date</th>
+                <th>Acts Needed</th>
+            </tr>
+            <tr>
+                <td>Velour</td>
+                <td>Band1</td>
+                <td>Never</td>
+                <td>Opener</td>
+            </tr>
+        </table>
         <footer>
             <a href="index.html">Log Out</a>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
