--- a/HTMLFiles/homepage.html
+++ b/HTMLFiles/homepage.html
@@ -21,10 +21,11 @@
                 <option>Contact2</option>
             </optgroup>
         </select>
-        <a href="profile.html">Profile</a>
-        <a href="band_view.html">Bands</a>
-        <a href="shows.html">Shows</a>
-        
+        <nav>
+            <a href="profile.html">Profile</a>
+            <a href="band_view.html">Bands</a>
+            <a href="shows.html">Shows</a>
+        </nav>
         <footer>
             <a href="index.html">Log Out</a>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
