Added a link to the homepage on all necessary pages for navigation

--- a/HTMLFiles/band_view.html
+++ b/HTMLFiles/band_view.html
@@ -24,6 +24,7 @@
         </table>
         <a href="band.html">band example</a>
         <footer>
+            <a href="homepage.html">Home</a>
             <a href="index.html">Log Out</a>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
         </footer>
