--- a/HTMLFiles/shows.html
+++ b/HTMLFiles/shows.html
@@ -25,6 +25,7 @@
             </tr>
         </table>
         <footer>
+            <a href="homepage.html">Home</a>
             <a href="index.html">Log Out</a>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
         </footer>
