Added home navigstion option to band page

--- a/HTMLFiles/band.html
+++ b/HTMLFiles/band.html
@@ -13,6 +13,7 @@
         <p>Description of Band, genres, commitment level</p>
         <p>Needed instruments/positions</p>
         <footer>
+            <a href="homepage.html">Home</a>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
         </footer>
     </body>
