--- a/HTMLFiles/index.html
+++ b/HTMLFiles/index.html
@@ -18,6 +18,9 @@
             <input type="text" id="name" placeholder="username"/>
             <button type="submit">Login</button>
         </form>
+        <div id="Mission Statement">
+            <p>The goal of Bandfinder.click is to connect BYU students interested in playing in a band with other like-minded students, and to then help them find opportunities to play with other local bands.</p>
+        </div>
         <footer>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
         </footer>
