I reliazed that I had used the body tag the way I should have been using the main tag so I went through and fixed all of that

--- a/HTMLFiles/band.html
+++ b/HTMLFiles/band.html
@@ -5,16 +5,19 @@
             Band example page
         </title>
     </head>
-    <body>
-        <header>
+    <main>
+       <header>
             User
         </header>
+        <body>
         <p>Band Name</p>
         <p>Description of Band, genres, commitment level</p>
         <p>Needed instruments/positions</p>
+        </body>
         <footer>
             <a href="homepage.html">Home</a>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
         </footer>
-    </body>
+    </main>
+    
 </html>
