--- a/HTMLFiles/band_view.html
+++ b/HTMLFiles/band_view.html
@@ -4,29 +4,32 @@
         <title>
             Band List Page
         </title>
-    </head>
-    <body>
+    </head> 
+    <main>
         <header>
             User
         </header>
-        <p>List of bands on the site looking for members(Database)</p>
-        <table>
-            <tr>
-                <th>Band Name</th>
-                <th>Genre</th>
-                <th>Available Positions</th>
+        <body> 
+            <p>List of bands on the site looking for members(Database)</p>
+            <table>
+                <tr>
+                    <th>Band Name</th>
+                    <th>Genre</th>
+                    <th>Available Positions</th>
+                </tr>
+                <tr>
+                    <td>Example Band</td>
+                    <td>Rock</td>
+                    <td>Drummer</td>
             </tr>
-            <tr>
-                <td>Example Band</td>
-                <td>Rock</td>
-                <td>Drummer</td>
-            </tr>
-        </table>
-        <a href="band.html">band example</a>
+         </table>
+            <a href="band.html">band example</a>
+        
+        </body>
         <footer>
             <a href="homepage.html">Home</a>
             <a href="index.html">Log Out</a>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
         </footer>
-    </body>
+    </main>
 </html>
