--- a/HTMLFiles/homepage.html
+++ b/HTMLFiles/homepage.html
@@ -5,30 +5,33 @@
             Homepage
         </title>
     </head>
-    <body>
+    <main>
         <header>
             User
         </header>
-        <p>Messages(3rd party service)</p>
-        <label for="Messages">Inbox</label>
-        <select id="'Messages">
-            <optgroup label="Recieved Messages">
-                <option>Message 1</option>
-                <option>Message 2</option>
-            </optgroup>
-            <optgroup label="Send New Message">
-                <option>Contact1</option>
-                <option>Contact2</option>
-            </optgroup>
-        </select>
-        <nav>
-            <a href="profile.html">Profile</a>
-            <a href="band_view.html">Bands</a>
-            <a href="shows.html">Shows</a>
-        </nav>
+        <body>
+            <p>Messages(3rd party service)</p>
+            <label for="Messages">Inbox</label>
+            <select id="'Messages">
+                <optgroup label="Recieved Messages">
+                    <option>Message 1</option>
+                    <option>Message 2</option>
+                </optgroup>
+                <optgroup label="Send New Message">
+                    <option>Contact1</option>
+                    <option>Contact2</option>
+                </optgroup>
+            </select>
+            <nav>
+                <a href="profile.html">Profile</a>
+                <a href="band_view.html">Bands</a>
+                <a href="shows.html">Shows</a>
+            </nav>
+            
+        </body>
         <footer>
             <a href="index.html">Log Out</a>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
         </footer>
-    </body>
+    </main>
 </html>
