--- a/HTMLFiles/shows.html
+++ b/HTMLFiles/shows.html
@@ -5,10 +5,12 @@
             Shows
         </title>
     </head>
-    <body>
+    <main>
         <header>
-            User
+                User
         </header>
+    <body>
+        
         <p>List of shows (Websocket Data)</p>
         <table>
             <tr>
@@ -24,10 +26,12 @@
                 <td>Opener</td>
             </tr>
         </table>
-        <footer>
+        
+    </body>
+    <footer>
             <a href="homepage.html">Home</a>
             <a href="index.html">Log Out</a>
             <a href="https://github.com/zach4ster/startup.git">GitHub</a>
-        </footer>
-    </body>    
+    </footer>
+    </main>    
 </html>
